# leros_ws

./: README.md
src/ai_worker/docker/: Dockerfile.amd64  Dockerfile.arm64  container.sh  docker-compose.yml
src/ai_worker/ffw/: CHANGELOG.rst  package.xml
src/ai_worker/ffw_bringup/: CHANGELOG.rst  package.xml  setup.py
src/ai_worker/ffw_description/: CHANGELOG.rst  package.xml
src/ai_worker/ffw_joint_trajectory_command_broadcaster/: CHANGELOG.rst  package.xml
src/ai_worker/ffw_joystick_controller/: CHANGELOG.rst  package.xml
src/cyclo_control/: .gitignore  README.md  cyclo_control_ci.repos
src/cyclo_control/cyclo_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/cyclo_control/cyclo_motion_controller_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/cyclo_control/cyclo_motion_controller_core/cmake/: cyclo_motion_controller_coreConfig.cmake.in
src/cyclo_control/cyclo_motion_controller_core/include/cyclo_motion_controller_core/common/: type_define.hpp
src/cyclo_control/cyclo_motion_controller_core/include/cyclo_motion_controller_core/controllers/ai_worker/: ai_worker_bimanual_movej_controller.hpp  ai_worker_bimanual_movel_controller.hpp  ai_worker_movej_controller.hpp  ai_worker_movel_controller.hpp  vr_controller.hpp
src/cyclo_control/cyclo_motion_controller_core/include/cyclo_motion_controller_core/controllers/open_manipulator/: open_manipulator_movej_controller.hpp  open_manipulator_movel_controller.hpp
src/cyclo_control/cyclo_motion_controller_core/include/cyclo_motion_controller_core/kinematics/: kinematics_solver.hpp
src/cyclo_control/cyclo_motion_controller_core/include/cyclo_motion_controller_core/optimization/: qp_base.hpp
src/cyclo_control/cyclo_motion_controller_core/src/controllers/ai_worker/: ai_worker_bimanual_movej_controller.cpp  ai_worker_bimanual_movel_controller.cpp  ai_worker_movej_controller.cpp  ai_worker_movel_controller.cpp  vr_controller.cpp
src/cyclo_control/cyclo_motion_controller_core/src/controllers/open_manipulator/: open_manipulator_movej_controller.cpp  open_manipulator_movel_controller.cpp
src/cyclo_control/cyclo_motion_controller_core/src/kinematics/: kinematics_solver.cpp
src/cyclo_control/cyclo_motion_controller_core/src/retargeting/: __init__.py  optimizer.py  robot_wrapper.py  seq_retarget.py
src/cyclo_control/cyclo_motion_controller_models/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/cyclo_control/cyclo_motion_controller_models/launch/: view_ffw_lg2_leader.launch.py  view_ffw_sg2_follower.launch.py  view_omx_f.launch.py  view_omx_l.launch.py  view_omy_3m.launch.py  view_omy_f3m.launch.py  view_omy_l100.launch.py
src/cyclo_control/cyclo_motion_controller_models/models/ai_worker/: ffw_lg2_leader.urdf  ffw_sg2_follower.urdf  ffw_sg2_follower_default.srdf  ffw_sg2_follower_modified.srdf
src/cyclo_control/cyclo_motion_controller_models/models/hx5_d20/: hx5_d20_left.urdf  hx5_d20_right.urdf
src/cyclo_control/cyclo_motion_controller_models/models/hx5_d20/meshes/hx5_d20_right/: hx5_d20_base_unit.stl
src/cyclo_control/cyclo_motion_controller_models/models/omx/: omx_f.urdf
src/cyclo_control/cyclo_motion_controller_models/models/omy/: omy_3m.urdf  omy_f3m.urdf  omy_l100.urdf
src/cyclo_control/cyclo_motion_controller_models/rviz/: ffw_lg2_leader.rviz  omx.rviz  omy.rviz
src/cyclo_control/cyclo_motion_controller_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/cyclo_control/cyclo_motion_controller_ros/config/: ai_worker_config.yaml  omx_config.yaml  omy_config.yaml
src/cyclo_control/cyclo_motion_controller_ros/include/cyclo_motion_controller_ros/nodes/ai_worker/: ai_worker_bimanual_movej_controller_node.hpp  ai_worker_bimanual_movel_controller_node.hpp  ai_worker_movej_controller_node.hpp  ai_worker_movel_controller_node.hpp  leader_controller_node.hpp  vr_controller_node.hpp
src/cyclo_control/cyclo_motion_controller_ros/include/cyclo_motion_controller_ros/nodes/omx/: omx_movej_controller_node.hpp  omx_movel_controller_node.hpp
src/cyclo_control/cyclo_motion_controller_ros/include/cyclo_motion_controller_ros/nodes/omy/: omy_movej_controller_node.hpp  omy_movel_controller_node.hpp
src/cyclo_control/cyclo_motion_controller_ros/include/cyclo_motion_controller_ros/utils/: reference_checker_node.hpp
src/cyclo_control/cyclo_motion_controller_ros/launch/: ai_worker_controller.launch.py  omx_controller.launch.py  omy_controller.launch.py
src/cyclo_control/cyclo_motion_controller_ros/src/nodes/ai_worker/: ai_worker_bimanual_movej_controller_node.cpp  ai_worker_bimanual_movel_controller_node.cpp  ai_worker_movej_controller_node.cpp  ai_worker_movel_controller_node.cpp  leader_controller_node.cpp  vr_controller_node.cpp
src/cyclo_control/cyclo_motion_controller_ros/src/nodes/omx/: omx_movej_controller_node.cpp  omx_movel_controller_node.cpp
src/cyclo_control/cyclo_motion_controller_ros/src/nodes/omy/: omy_movej_controller_node.cpp  omy_movel_controller_node.cpp
src/cyclo_control/cyclo_motion_controller_ros/src/utils/: eef_interactive_marker_node.cpp  reference_checker_node.cpp
src/cyclo_control/cyclo_motion_controller_ros_py/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
src/cyclo_control/cyclo_motion_controller_ros_py/scripts/: __init__.py  arm_retargeting.py  teleop_retargeting.py
src/cyclo_control/cyclo_motion_controller_ros_py/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/cyclo_control/osqp_eigen_vendor/: CMakeLists.txt  THIRD_PARTY_NOTICES.md  package.xml
src/cyclo_control/osqp_eigen_vendor/cmake/: osqp_eigen_vendor-extras.cmake
src/lerobot_robot_ros2_zenoh/: .gitignore  README.md  pyproject.toml  setup.py
src/lerobot_robot_ros2_zenoh/lerobot_robot_ros2_zenoh/: __init__.py  camera_ros2.py  config_ffw_bg2.py  config_ros2_camera.py  config_ros2_zenoh.py  keyboard_joint_teleop.py  ros2_zenoh.py
src/open_manipulator/: open_manipulator_ci.repos
src/robotis_interfaces/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md
src/teleop/: pyproject.toml
src/zenoh_ros2_sdk/: .gitignore  README.md  STRUCTURE.md  mkdocs.yml  pyproject.toml  setup.py
(+153 files in other folders)
