[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_ros2_zenoh"
version = "0.1.0"
description = "LeRobot integration for ROS2 robots via Zenoh"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Woojin Wie", email = "wwj@robotis.com"},
]
keywords = ["lerobot", "ros2", "zenoh", "robotics", "robot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Robotics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "lerobot",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[project.urls]
Homepage = "https://github.com/ROBOTIS-GIT/lerobot_robot_ros2_zenoh"
Repository = "https://github.com/ROBOTIS-GIT/lerobot_robot_ros2_zenoh"
