<?xml version="1.0"?>
<package format="3">
  <name>cyclo_control</name>
  <version>0.3.0</version>
  <description>
    Meta package for Cyclo Control
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ai.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/cyclo_control</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/cyclo_control/issues</url>
  <author email="kyu@robotis.com">Yeonguk Kim</author>
  <author email="nhw@robotis.com">Hyunwoo Nam</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cyclo_motion_controller_core</exec_depend>
  <exec_depend>cyclo_motion_controller_models</exec_depend>
  <exec_depend>cyclo_motion_controller_ros</exec_depend>
  <exec_depend>cyclo_motion_controller_ros_py</exec_depend>
  <exec_depend>osqp_eigen_vendor</exec_depend>
  <exec_depend>python3-nlopt</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
