cmake_minimum_required(VERSION 3.16)
project(cyclo_motion_controller_core)

# C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Eigen3 REQUIRED)
find_package(pinocchio REQUIRED)
find_package(osqp_eigen_vendor REQUIRED)
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

set(SOURCES
    src/kinematics/kinematics_solver.cpp
    src/controllers/ai_worker/vr_controller.cpp
    src/controllers/ai_worker/ai_worker_movej_controller.cpp
    src/controllers/ai_worker/ai_worker_movel_controller.cpp
    src/controllers/ai_worker/ai_worker_bimanual_movel_controller.cpp
    src/controllers/ai_worker/ai_worker_bimanual_movej_controller.cpp
    src/controllers/open_manipulator/open_manipulator_movej_controller.cpp
    src/controllers/open_manipulator/open_manipulator_movel_controller.cpp
)

add_library(${PROJECT_NAME} SHARED ${SOURCES})

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Eigen3::Eigen
        pinocchio::pinocchio
        OsqpEigen::OsqpEigen
)

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}>
        $<INSTALL_INTERFACE:include/${PROJECT_NAME}>
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)

ament_python_install_package(retargeting PACKAGE_DIR src/retargeting)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
)

install(
    DIRECTORY include/${PROJECT_NAME}
    DESTINATION include
)

# Export targets for use by other packages
install(
    EXPORT ${PROJECT_NAME}Targets
    FILE ${PROJECT_NAME}Targets.cmake
    NAMESPACE ${PROJECT_NAME}::
    DESTINATION lib/cmake/${PROJECT_NAME}
)

# Generate package config file
include(CMakePackageConfigHelpers)

set(CMAKE_INSTALL_INCLUDEDIR "include")

configure_package_config_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION lib/cmake/${PROJECT_NAME}
    PATH_VARS CMAKE_INSTALL_INCLUDEDIR
)

write_basic_package_version_file(
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
    VERSION 0.1.1
    COMPATIBILITY SameMajorVersion
)

install(
    FILES
        "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
        "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
    DESTINATION lib/cmake/${PROJECT_NAME}
)

target_compile_options(${PROJECT_NAME} PRIVATE
    $<$<CONFIG:Release>:-O3>
    $<$<CONFIG:Debug>:-g -O0>
)

ament_export_dependencies(Eigen3 pinocchio osqp_eigen_vendor)

ament_package()
