<?xml version="1.0"?>
<package format="3">
  <name>cyclo_motion_controller_core</name>
  <version>0.3.0</version>
  <description>Core Cyclo motion controller library for inverse kinematics and QP-based control without ROS dependencies</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <license>MIT</license>
  <url type="website">http://ai.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/cyclo_control</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/cyclo_control/issues</url>
  <author email="kyu@robotis.com">Yeonguk Kim</author>
  <author email="nhw@robotis.com">Hyunwoo Nam</author>
  <build_depend>eigen</build_depend>
  <build_depend>pinocchio</build_depend>
  <build_depend>osqp_eigen_vendor</build_depend>
  <build_export_depend>osqp_eigen_vendor</build_export_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>python3-nlopt</exec_depend>
  <exec_depend>osqp_eigen_vendor</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
