<?xml version="1.0"?>
<package format="3">
  <name>cyclo_motion_controller_models</name>
  <version>0.3.0</version>
  <description>Robot models for Cyclo motion controllers</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ai.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/cyclo_control</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/cyclo_control/issues</url>
  <author email="kyu@robotis.com">Yeonguk Kim</author>
  <author email="nhw@robotis.com">Hyunwoo Nam</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
