<?xml version="1.0"?>
<package format="3">
  <name>cyclo_motion_controller_ros</name>
  <version>0.3.0</version>
  <description>ROS 2 wrapper for Cyclo motion controller using QP-based inverse kinematics</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ai.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/cyclo_control</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/cyclo_control/issues</url>
  <author email="kyu@robotis.com">Yeonguk Kim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>tf2_ros</depend>
  <depend>robotis_interfaces</depend>
  <depend>cyclo_motion_controller_core</depend>
  <depend>ament_index_cpp</depend>
  <exec_depend>cyclo_motion_controller_models</exec_depend>
  <exec_depend>cyclo_motion_controller_ros_py</exec_depend>
  <!-- Build dependencies -->
  <build_depend>eigen</build_depend>
  <build_depend>pinocchio</build_depend>
  <build_depend>osqp_eigen_vendor</build_depend>
  <exec_depend>osqp_eigen_vendor</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
