<?xml version="1.0"?>
<package format="3">
  <name>cyclo_motion_controller_ros_py</name>
  <version>0.3.0</version>
  <description>Cyclo motion controller ROS 2 Python package</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://ai.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/cyclo_control</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/cyclo_control/issues</url>
  <author email="nhw@robotis.com">Hyunwoo Nam</author>
  <depend>rclpy</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cyclo_motion_controller_core</exec_depend>
  <exec_depend>cyclo_motion_controller_models</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>robotis_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
